# lfa-net

./: .gitignore  LICENSE  README.md  pyproject.toml
lfa_net/: __init__.py  layers.py  lightning_module.py  losses.py  model.py
lfa_net/config/: config.yaml
lfa_net/config/data/: fundus_av.yaml
lfa_net/config/model/: latent_skip_av.yaml  lfa_net_1024.yaml  lfa_net_1024_best.yaml  lfa_net_av.yaml  lfa_net_av_best.yaml  lfa_net_deep.yaml
lfa_net/config/train/: train_av_best.yaml
lfa_net/data/: __init__.py  datamodule.py  multitask_datamodule.py  transforms.py
lfa_net/models/: __init__.py  latent_skip.py  multitask.py  multitask_lightning.py  multitask_losses.py
src/lfa_net/: metrics.py
src/lfa_net/config/data/: fundus.yaml  fundus_1024.yaml
src/lfa_net/config/model/: lfa_net.yaml  lfa_net_light.yaml  lfa_net_wide.yaml
src/lfa_net/config/train/: default.yaml  train_1024.yaml
